# swisspairing

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml
benchmarks/: README.md  benchmark_exact_corpus.py  benchmark_py4swiss_compare.py  benchmark_reference_compare.py  export_chess_results_trf_snapshots.py  export_pychess_trf_batches.py  import_chess_results_event.py  import_lichess_fixtures.sh  normalize_trf16.py  py4swiss_bench_case_runner.py  reference_compare_case_runner.py  run_recurring_baselines.py  simulate_swiss_batches.py
benchmarks/fixtures/: exact_runtime_cases.json
benchmarks/fixtures/chess_results/aeroflot_open_2026/: aeroflot_open_2026_r01.trf  aeroflot_open_2026_r02.trf  aeroflot_open_2026_r03.trf  aeroflot_open_2026_r04.trf  aeroflot_open_2026_r05.trf  (+5 more)
benchmarks/fixtures/lichess/: README.md  lichess_swiss_2026.02.14_cY3wR140_weekly-agca-prize-50-dollars.trf  lichess_swiss_2026.02.28_KQYWuizM_weekly-agca-prize-50-dollars.trf  lichess_swiss_2026.03.03_7TYuxURK_bullet-increment.trf
benchmarks/fixtures/p128_regressions/: README.md  sim0003_r07.trf
benchmarks/fixtures/p32_regressions/: README.md  sim0001_r06.trf
benchmarks/fixtures/p64_regressions/: README.md  sim0001_r06.trf  sim0002_r05.trf  sim0003_r04.trf
benchmarks/results/recurring/: trend.csv
docs/: C0401_Basic_rules_for_Swiss_Systems.html  C0401_Basic_rules_for_Swiss_Systems_from_2026_02_01.md  C0401_Basic_rules_for_Swiss_Systems_till_2026_01_31.md  C0402_General_handling_rules_for_Swiss_Tournaments.html  C0402_General_handling_rules_for_Swiss_Tournaments_from_2026_02_01.md  C0402_General_handling_rules_for_Swiss_Tournaments_till_2026_01_31.md  C0403_FIDE_Dutch_System.html  C0403_FIDE_Dutch_System_from_2026_02_01.md  C0403_FIDE_Dutch_System_till_2026_01_31.md  C040401_Dubov_System_from_2026_02_01.md  C040401_Dubov_System_till_2026_01_31.md  C040402_Burstein_System_from_2026_02_01.md  C040402_Burstein_System_till_2026_01_31.md  C040403_Lim_System_from_2026_02_01.md  C040403_Lim_System_till_2026_01_31.md  C0404_Other_FIDE_approved_Pairing_Systems_from_2026_02_01.md  C0404_Other_FIDE_approved_Pairing_Systems_till_2026_01_31.md  C0405_Double_Swiss_Pairing_System_from_2026_02_01.md  C0406_Swiss_Team_Pairing_System_from_2026_02_01.md  C0406_Swiss_Team_Pairing_System_till_2026_01_31.md  C0407_FIDE_approved_Accelerated_Systems_from_2026_02_01.md  C0407_FIDE_approved_Accelerated_Systems_till_2026_01_31.md  C04Annex2_TRF16.md  FIDE_APPROVAL_AND_ENDORSEMENT.md  FIDE_SWISS_RULES_AGENT_INDEX.md  PLAN.md  RULEBOOK_DIFF_2026.md
scripts/: wheel_smoke.py
src/swisspairing/: __init__.py  _matching.py  benchmarking.py  chess_results.py  chess_results_export.py  chess_results_site.py  dutch.py  exceptions.py  fide_refs.py  model.py  pychess_adapter.py  pychess_dump.py  recurring_baseline.py  synthetic.py  tournament.py
tests/: test_bbp_reference.py  test_benchmarking.py  test_chess_results.py  test_chess_results_site.py  test_dutch.py  test_dutch_internals.py  test_fide_refs.py  test_fide_rulebook_2026.py  test_lichess_reference.py  test_matching.py  test_model.py  test_py4swiss_golden.py  test_pychess_adapter.py  test_pychess_dump.py  test_recurring_baseline.py  test_synthetic.py  test_tournament.py
tests/golden/: py4swiss_compare_runner.py
tests/golden/fixtures/: burstein_late_entries.trf  burstein_late_entries_black.trf  dubov_bye_for_high_tpn.trf  dutch_d2_criterion_d.trf  dutch_e2_both_absolute_higher_favored.trf  dutch_e2_both_absolute_lower_favored.trf  invalid_code.trf  no_legal_pairings.trf  no_legal_pairings_odd.trf
(+284 files in other folders)
