[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "swisspairing"
version = "0.1.0"
description = "FIDE Swiss (Dutch) pairing package based on rustworkx"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rustworkx>=0.17.1",
]

[dependency-groups]
dev = [
    "networkx>=3.5",
    "py4swiss>=0.3.1",
    "pyright>=1.1.408",
    "pytest>=8.3.5",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
